# sg-property-ai-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: README.md  sg_property_cli.py
docs/: installation.md  using-with-chatgpt.md  using-with-claude-desktop.md  using-with-cursor.md
examples/: 01-hdb-resale-buyer.md  02-condo-upgrader.md  03-foreigner-rental.md  04-condo-seller.md  05-affordability-check.md  06-condo-to-landed-upgrade.md  07-landed-to-condo-downsize.md  08-condo-to-hdb-downgrade.md  09-decoupling-walkthrough.md
mcp_server/sg_property_mcp/: __init__.py  __main__.py  server.py
mcp_server/tests/: test_lease_decay.py  test_mortgage.py  test_rag.py  test_scorecard.py  test_stamp_duty.py  test_upgrade_paths.py
ollama/: Modelfile.gemma3-26b  Modelfile.gemma3-4b  Modelfile.llama3.3-70b  Modelfile.qwen3-8b  README.md
prompts/: due-diligence-checklist.md  intake-questionnaire.md  listing-comparison-template.md  negotiation-playbook.md  system-prompt.md
prompts/minimal/: decision-trees.md  few-shot-examples.md  quick-reference-card.md  system-prompt-compact.md  system-prompt-tiny.md
rag/: README.md  __init__.py  cli.py  search.py
skills/: README.md  condo-due-diligence.md  cpf-housing-usage.md  decoupling-strategy.md  executive-condo.md  hdb-eligibility.md  landed-property.md  lease-decay.md  market-outlook-2026-2027.md  neighbourhood-scoring.md  new-launch-buying.md  red-flags-checklist.md  rental-tenancy.md  resale-buying.md  sell-first-vs-buy-first.md  selling-process.md  stamp-duties.md  tdsr-msr-loan-rules.md  upgrade-downgrade-paths.md
(+11 files in other folders)
