[project]
name = "sg-property-ai-agent"
version = "0.1.0"
description = "AI assistant kit for Singapore residential property research, comparison, and due diligence. Prompts, skills, and MCP server with calculators."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ahnrusty" }]
keywords = ["singapore", "property", "real-estate", "mcp", "ai-agent", "hdb", "condo", "absd", "bsd", "tdsr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
sg-property-mcp = "sg_property_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["mcp_server", "."]
include = ["sg_property_mcp*", "rag*"]

[tool.setuptools.package-dir]
"sg_property_mcp" = "mcp_server/sg_property_mcp"
"rag" = "rag"

[tool.setuptools.package-data]
"rag" = ["corpus/*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["mcp_server/tests"]
pythonpath = ["mcp_server", "."]
